# CUDA_IMAGE_SEGMENTATION_PROJECT

./: CMakeLists.txt  INSTALL  Makefile  README.md  run.sh
src/: segmentation.cpp  segmentation.cu
