cmake_minimum_required(VERSION 3.10)
project(ImageSegmentationCUDA)

find_package(OpenCV REQUIRED)
find_package(CUDA)

include_directories(${OpenCV_INCLUDE_DIRS})
if(CUDA_FOUND)
    include_directories(${CUDA_INCLUDE_DIRS})
    set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS};-std=c++11")
    cuda_add_executable(segmentation src/segmentation.cpp src/segmentation.cu)
    target_link_libraries(segmentation ${OpenCV_LIBS} ${CUDA_LIBRARIES})
else()
    add_executable(segmentation src/segmentation.cpp)
    target_link_libraries(segmentation ${OpenCV_LIBS})
endif()
